<resources>
    <string name="app_name">HomeX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Chào mừng,</string>
    <string name="email">Email</string>
    <string name="welcome_back">Chào mừng trở lại</string>
    <string name="password">Mật khẩu</string>
    <string name="new_member">Thành viên mới</string>
    <string name="sign_in_txt">Bằng cách đăng ký, bạn đồng ý với\n&lt;br>&lt;a href="https://www.facebook.com"> Điều khoản &amp; Điều kiện&lt;/a> và &lt;a href="https://www.google.com">Chính sách riêng tư&lt;/a>&lt;/br></string>
    <string name="cont">Tiếp tục</string>
    <string name="login">Đăng nhập</string>
    <string name="signin">Đăng ký</string>
    <string name="pwd_check_1">Khoảng từ 8 – 32 ký tự</string>
    <string name="pwd_check_2">1 chữ hoa, 1 chữ thường</string>
    <string name="verification">Xác thực tài khoản</string>
    <string name="verify_code">Mã xác thực</string>
    <string name="resend_otp_html">&lt;u>Gửi lại email&lt;/u> </string>
    <string name="cannot_received">Không nhận được?</string>
    <string name="resend_verification"><u>Gửi lại email</u></string>
    <string name="verify">Xác thực</string>
    <string name="final_step">Bước cuối cùng</string>
    <string name="finish">Hoàn thành</string>
    <string name="phone">Số điện thoại</string>
    <string name="dob">Ngày sinh</string>
    <string name="sex">Giới tính</string>
    <string name="first_name">Tên</string>
    <string name="middle_last">Họ và tên lót</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="back_to_login">Trở về đăng nhập</string>
    <string name="send_email_verification">Gửi email xác thực</string>
    <string name="enter_verify_code">Nhập mã xác thực</string>
    <string name="create_new_password">Tạo mật khẩu mới</string>
    <string name="new_pwd">Mật khẩu mới</string>
    <string name="confirm_pwd">Xác nhận mật khẩu</string>
    <string name="something_went_wrong">Đã xảy ra sự cố</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ok">OK</string>
    <string name="me">Tôi</string>
    <string name="location_rationale">Chúng tôi sử dụng vị trí của bạn để gợi ý điểm đến cho bạn</string>
    <string name="notification">Thông báo</string>
    <string name="explore">Khám phá</string>
    <string name="home">Trang chủ</string>
    <string name="search_txt">Bạn muốn đi đâu?</string>
    <string name="popular_location">Địa điểm nổi bật</string>
    <string name="see_all">Xem tất cả</string>
    <string name="popular_home">Căn nhà nổi bật</string>
    <string name="location">Địa điểm</string>
    <string name="my_profile">Thông tin cá nhân</string>
    <string name="your_house">Căn nhà của bạn</string>
    <string name="pending_request">Các yêu cầu đã nhận</string>
    <string name="requests_history">Lịch sử trao đổi</string>
    <string name="user_manual">Cách thức hoạt động</string>
    <string name="your_point">Điểm tích lũy</string>
    <string name="read_all">Đọc tất cả</string>
    <string name="search">Tìm kiếm</string>
    <string name="logout">Đăng xuất</string>
    <string name="read_all_noti">Đọc hết tất cả</string>
    <string name="cancel">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="profile">Xem hồ sơ</string>
    <string name="report">Báo cáo người dùng</string>
    <string name="block_user">Chặn người dùng</string>
    <string name="text">Nhắn tin</string>
    <string name="search_hint">Tìm địa điểm, căn nhà</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="number_of_people">Số người</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="filter">Bộ lọc</string>
    <string name="closet_distance">Khoảng cách gần nhất</string>
    <string name="high_to_low">Giá từ cao tới thấp</string>
    <string name="low_to_high">Giá từ thấp tới cao</string>
    <string name="highest_rating">Rating cao nhất</string>
    <string name="price_range">Khoảng giá</string>
    <string name="min_price">Giá tối thiểu</string>
    <string name="max_price">Giá tối đa</string>
    <string name="util">Tiện ích</string>
    <string name="wifi">Wifi</string>
    <string name="computer">Máy tính</string>
    <string name="smart_tv">Smart TV</string>
    <string name="bath_tub">Bồn tắm</string>
    <string name="parking_lot">Bãi đỗ xe</string>
    <string name="air_conditioner">Điều hòa</string>
    <string name="washing_machine">Máy giặt</string>
    <string name="fridge">Tủ lạnh</string>
    <string name="pool">Bể bơi</string>
    <string name="delete_filter">&lt;a href="">Xóa bộ lọc&lt;/a></string>
    <string name="apply">Áp dụng</string>
    <string name="see_maps">Xem bản đồ></string>
    <string name="see_map">Xem bản đồ</string>
    <string name="contact">Liên hệ</string>
    <string name="report_short">Báo cáo</string>
    <string name="change_date">Đổi ngày</string>
    <string name="create_request">Tạo yêu cầu</string>
    <string name="pick_your_home">Chọn nhà của bạn dùng để trao đổi</string>
    <string name="pick_home">Chọn nhà bạn muốn trao đổi</string>
    <string name="status">Trạng thái:</string>
    <string name="add_home_title_1">Xin chào, nhà của bạn là loại nhà gì?</string>
    <string name="add_home_small_txt_1">Hãy cho chúng tôi biết về nhà loại nhà của bạn</string>
    <string name="update_profile">Cập nhật thông tin</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="update_avatar">Chỉnh sửa ảnh đại diện</string>
    <string name="update">Cập nhật</string>
    <string name="user_profile">Hồ sơ cá nhân</string>
    <string name="sign_in_sign_up">Đăng nhập/Đăng ký</string>
    <string name="login_to_use">Hãy đăng nhập ngay để đột phá mọi trải nghiệm ngay nào!</string>
    <string name="add_home_title_2">Kể thêm cho chúng tôi về căn nhà của bạn</string>
    <string name="add_home_small_txt_2">Hãy điền các thông tin chi tiết về căn nhà của mình</string>
    <string name="add_home_title_3">Những tiện ích cũng như nội quy trong nhà của bạn</string>
    <string name="add_home_small_txt_3">Hãy cung cấp các tiện ích và nội quy để người dùng khác có thể biết &amp; tuân thủ khi trao đổi với bạn</string>
    <string name="add_home_title_4">Hình ảnh luôn thu hút người dùng và cho họ cái nhin tổng quan</string>
    <string name="add_home_small_txt_4">Hãy cho người dùng khác chiêm ngưỡng vẻ đẹp của căn nhà bạn</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="signup_signin">Đăng ký/Đăng nhập</string>
    <string name="swapped">Đã trao đổi</string>
    <string name="rated">Đã đánh giá</string>
    <string name="rate">Đánh giá</string>
    <string name="swap_history">Lịch sử trao đổi</string>
    <string name="rate_home">Đánh giá căn hộ</string>
    <string name="rate_user">Đánh giá nguời dùng</string>
    <string name="home_comment_hint">Cảm nghĩ của bạn về căn hộ</string>
    <string name="send_rating">Gửi đánh giá</string>
    <string name="top_up_point">Nạp điểm</string>
    <string name="your_rating">Đánh giá của bạn</string>
    <string name="no_smoking">Không hút thuốc</string>
    <string name="no_pet">Không thú cưng</string>
    <string name="upload_image">Thêm hình ảnh</string>
    <string name="upload_image_2">Thêm hình ảnh %1$d/5</string>
    <string name="select_from_gallery">Chọn từ thư viện</string>
    <string name="temp_images_dir">temp_image_file</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="pending">Chờ xác nhận</string>
    <string name="detail">Chi tiết yêu cầu</string>
    <string name="check_in">Xác nhận Check-in</string>
    <string name="check_out">Xác nhận Check-out</string>
    <string name="create_request_again">Tạo yêu cầu lại</string>
    <string name="status_waiting">Chờ xác nhận</string>
    <string name="status_accepted">Đã chấp nhận</string>
    <string name="status_rejected">Đã từ chối</string>
    <string name="status_reviewing">Chờ đánh giá</string>
    <string name="status_checkin">Đang trao đổi</string>
    <string name="status_done">Hoàn tất</string>
    <string name="request_type">Phương thức: %s</string>
    <string name="request_type_point">Trao đổi bằng điểm</string>
    <string name="request_type_house">Trao đổi nhà</string>
    <string name="status_hidden">Đang ẩn</string>
    <string name="status_pending">Đang kiểm duyệt</string>
    <string name="status_active">Đang hoạt động</string>
    <string name="status_swapping">Đang trao đổi</string>
    <string name="see_more">&lt;u>Xem thêm&lt;/u></string>
    <string name="see_less">&lt;u>Ẩn bớt&lt;/u></string>
    <string name="see_more_html"><u>Xem thêm</u></string>
    <string name="please_fill_up_inputs">Hãy điền các thông tin trước khi qua màn hình tiếp theo</string>
    <string name="int_input_string">%d</string>
    <string name="start_end_date">%s - %s</string>
    <string name="between_dates">%d ngày</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="please_fill_in_correctly">Hãy điền tất cả thông tin chính xác, đầy đủ</string>
    <string name="create_home_success">Tạo nhà thành công</string>
    <string name="edit_home_success">Sửa thông tin nhà thành công</string>
    <string name="point_you_have">Bạn hiện đang có %d Points</string>
    <string name="points">%d Points</string>
    <string name="accept_request">Chấp nhận yêu cầu</string>
    <string name="accept_request_message">Bạn có muốn chấp nhận yêu cầu trao đổi này ?</string>
    <string name="check_in_request_message">Xác nhận đã check-in tới nhà ? Hãy xác nhận để đảm bảo quyền lợi của bản thân.</string>
    <string name="check_out_request_message">Xác nhận đã check-out khỏi nhà ? Hãy xác nhận để đảm bảo quyền lợi của bản thân.</string>
    <string name="reject_request">Từ chối yêu cầu</string>
    <string name="reject_request_message">Bạn có muốn từ chối yêu cầu trao đổi này ?</string>
    <string name="system_will_notify_you_when_new_request_come">Hệ thống sẽ thông báo cho bạn\n khi có yêu cầu mới</string>
    <string name="request_waiting">Yêu cầu trao đổi đang chờ được chấp nhận. Hãy nhấn \"Liên hệ\" nếu bạn muốn liên lạc với người dùng này để trao đổi thêm.</string>
    <string name="request_rejected">Yêu cầu trao đổi đã bị từ chối. Hãy nhấn \"Liên hệ\" nếu bạn muốn liên lạc với người dùng này để trao đổi thêm.</string>
    <string name="request_accepted">Yêu cầu trao đổi đã được chấp nhận. Khi tới thời gian trao đổi, vui lòng nhấn \"Xác nhận Check-in\" khi bạn đã tới nhận nhà.</string>
    <string name="request_reviewing">Yêu cầu trao đổi đã hoàn thành. Bạn hãy nhấn \"Đánh giá\" để đánh giá người dùng và trải nghiệm về căn nhà nhé.</string>
    <string name="request_checkin">Bạn đã check-in nhà thành công. Hãy vui lòng nhấn \"Check-out\" khi hết thời gian trao đổi để đảm bảo quyền lợi của mình.</string>
    <string name="error_invalid_name">Tên không hợp lệ</string>
    <string name="take_new_picture">Chụp hình mới</string>
    <string name="dont_worry">Đừng lo lắng, ai cũng có lúc quên mà</string>
    <string name="type_your_email">Hãy nhập địa chỉ email của bạn</string>
    <string name="back_to_home">Trờ về Trang chủ</string>
</resources>