<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordInputLayout"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/old_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPasswordInputEdtTxt"
                style="@style/AppTheme.TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordInputLayout"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldPasswordInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/new_pwd"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordInputEdtTxt"
                style="@style/AppTheme.TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPasswordInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/confirm_pwd"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordInputEdtTxt"
                style="@style/AppTheme.TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/checkPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCheck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_uncheck_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPwdCheck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_check_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkPassword1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCheck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_uncheck_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPwdCheck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_check_2" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangePwd"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_below="@id/checkPassword2"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:text="@string/change_password" />

    </RelativeLayout>

</layout>