<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="175dp"
            android:layout_height="125dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeText"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_worry"
            android:textColor="#991E1E1E"
            android:textSize="16sp"
            android:id="@+id/smallTxt"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/welcomeText"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/smallTxt"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            android:layout_marginTop="3dp"
            style="@style/AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:inputType="textEmailAddress"
                style="@style/AppTheme.TextViewStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonPrimary"
            android:id="@+id/btnContinue"
            android:layout_marginTop="16dp"
            android:text="@string/send_email_verification"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonOutline"
            android:id="@+id/btnBackToLogin"
            android:layout_marginTop="16dp"
            android:text="@string/back_to_login"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnContinue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>