<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/upload_image"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDividerTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView17" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGallery"
            android:elevation="0dp"
            style="@style/ButtonProfile"
            android:drawableEnd="@drawable/ic_gallery"
            android:text="@string/select_from_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDividerTop" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGallery" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTakeNewPhoto"
            style="@style/ButtonProfile"
            android:drawableEnd="@drawable/ic_avatar_camera"
            android:text="@string/take_new_picture"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTakeNewPhoto" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            style="@style/ButtonWhite"
            android:textColor="@color/secondary_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>