<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeText"
            android:text="@string/enter_verify_code"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Email đã được gửi, hãy kiểm tra hộp thư của bạn và thư rác nếu không thấy email."
            android:textColor="#991E1E1E"
            android:textSize="16sp"
            android:id="@+id/smallTxt"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/welcomeText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/smallTxt"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/verify_code"
            android:layout_marginTop="3dp"
            style="@style/AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeInputEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                style="@style/AppTheme.TextViewStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resendLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cannot_received"
                android:textSize="14sp"
                android:id="@+id/forgotPassword"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_verification"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:textSize="14sp"/>
        </LinearLayout>




        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonPrimary"
            android:id="@+id/btnContinue"
            android:text="@string/verify"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resendLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>